--- a/RecSys.ipynb
+++ b/RecSys.ipynb
@@ -625,14 +625,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 6, 15, 24])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.squeeze(torch.sum(torch.tensor([[1,2,3],[4,5,6],[7,8,9]]), \n",
+    "                        1, keepdim=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MovieLensCfModel(torch.nn.Module):\n",
-    "    def __init__(self):\n",
-    "        "
+    "    def __init__(self, n_users, n_movies, n_features):\n",
+    "        super().__init__()\n",
+    "        self.uf = torch.nn.Embedding(n_users, n_features)\n",
+    "        self.mf = torch.nn.Embedding(n_movies, n_features)\n",
+    "        self.ub = torch.nn.Embedding(n_users, 1)\n",
+    "        self.mb = torch.nn.Embedding(n_movies, 1)\n",
+    "        \n",
+    "    def forward(self, u_idxs, m_idxs):\n",
+    "        return torch.squeeze(torch.sum((self.uf[u_idxs] * self.mf[m_idxs]), 1, \n",
+    "                                       keepdim=True) + self.ub[u_idxs] + self.mb[m_idxs])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
