--- a/RecSys.ipynb
+++ b/RecSys.ipynb
@@ -8,15 +8,8 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import torch\n",
+    "\n",
     "from pathlib import Path"
    ]
   },
@@ -236,17 +229,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ratings_arr = ratings.iloc[:,:3].values"
+    "int(0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 188,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_idxs = np.random.randint(low=0, high=len(ratings), size=int(0.2*len(ratings)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_idxs = np.array([False]*len(ratings))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_idxs[val_idxs] = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_trn_arr = ratings.iloc[~ratings_idxs,:3].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_val_arr = ratings.iloc[ratings_idxs,:3].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -324,7 +375,7 @@
        "4    1  2355       5  978824291"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,27 +386,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([   1, 3408,    4])"
+       "((818967, 3), (181242, 3))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ratings_arr[3]"
+    "ratings_trn_arr.shape, ratings_val_arr.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,106 +426,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlcf_ds = MovieLensCfDataset(uid_idx, mid_idx, ratings_arr)"
+    "mlcf_trn_ds = MovieLensCfDataset(uid_idx, mid_idx, ratings_trn_arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([   0, 1179,    3]), 1000209)"
+       "(array([  0, 590,   4]), 818967)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlcf_ds[5], len(mlcf_ds)"
+    "mlcf_trn_ds[5], len(mlcf_trn_ds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 0), (1176, 655), (5, 3)]"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z = zip(*[mlcf_ds[0], mlcf_ds[1]])\n",
-    "list(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = torch.tensor(np.array([1,2,3]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1., 2., 3.])"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t.float()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1, 2, 3])"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,63 +490,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlcf_dl = MovieLensCfDataLoader(mlcf_ds, shuffle=True)"
+    "mlcf_trn_dl = MovieLensCfDataLoader(mlcf_trn_ds, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = next(iter(mlcf_dl))"
+    "l = next(iter(mlcf_trn_dl))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([3463, 2633, 3881, 3647, 2234, 1488, 4408, 1675, 2435, 2445, 2077, 3475,\n",
-       "         5538, 5097, 1824, 4311, 3523,  944, 3889, 4619, 2236, 3304,  122, 1684,\n",
-       "         3966, 2402, 5594, 3475, 4618, 4155,  829, 3684, 5616, 4915, 3400, 1328,\n",
-       "         5053, 1747, 1265, 5255, 3394, 5779, 1777, 2764, 5534,  332,  244, 5095,\n",
-       "         3777, 3170, 5325, 2917, 2682, 4790, 3031, 5110, 1050, 3674,   77, 1610,\n",
-       "         1181, 5683, 4542, 3332, 3390, 2076, 1190, 5045, 1306, 2394, 3037,  676,\n",
-       "          713, 1242, 3303, 2030, 5428, 5078,  194, 4138,  148, 3606, 1888,  385,\n",
-       "         4915, 4138, 4823, 3453,  969, 3598, 4507, 4270, 5906, 1009, 5778,  933,\n",
-       "          636, 4697, 3877, 3474, 4578, 5393, 5989, 1598, 5609, 4459, 3053, 4212,\n",
-       "         2165, 2546, 4860, 4367, 4095, 2016,  527, 2016, 5688, 4970, 1223,  751,\n",
-       "         4447, 3846, 2506, 3828, 5877, 4681, 5447, 1486]),\n",
-       " tensor([2327, 3294, 1771,  582,  496, 1064, 1079, 3185, 1113, 2031, 1673, 1940,\n",
-       "         2618, 2091, 3827, 1301, 2433, 2757, 2473, 2213, 1640, 1627,  416, 3615,\n",
-       "          901, 1006, 2878, 2044,  347, 2848, 2460,  207, 2878, 1695, 1683, 1548,\n",
-       "         2077, 2595, 2344,  285, 2737,  546,  697,  232, 2222, 1156, 2306, 2631,\n",
-       "          220, 1276, 1109, 3001, 1202, 2071,  358,  901,  186,  201,  232, 2286,\n",
-       "         1998,  470, 2907,  124,  151, 1904, 2585, 1134,  655, 1183, 3620,  847,\n",
-       "         3371,  901, 1176, 3761,  511, 2315, 3848, 1356,  342, 2219,  421,   71,\n",
-       "         1720, 2086, 2045, 2359, 3444,  540, 1163, 1352,  886,  376, 2722,  278,\n",
-       "         1076, 2991, 3704,  453,  960,  354, 3483, 1196, 1372, 1491, 3784, 2588,\n",
-       "          589, 3355, 2516, 1989, 1349,  523, 2054,  416,  316, 1249,  385, 1899,\n",
-       "         2603, 1934,  911, 3203, 1337,  276,  999, 3476]),\n",
-       " tensor([5., 5., 3., 3., 4., 4., 3., 3., 2., 3., 4., 1., 4., 4., 4., 4., 3., 3.,\n",
-       "         5., 5., 4., 4., 2., 3., 4., 4., 3., 1., 2., 4., 4., 2., 4., 3., 3., 3.,\n",
-       "         3., 4., 2., 2., 3., 3., 4., 3., 4., 4., 1., 4., 3., 4., 2., 4., 5., 4.,\n",
-       "         4., 3., 1., 3., 4., 3., 4., 3., 3., 1., 3., 3., 4., 4., 4., 4., 1., 5.,\n",
-       "         2., 5., 5., 3., 1., 2., 4., 3., 4., 4., 3., 5., 3., 4., 4., 2., 3., 4.,\n",
-       "         4., 3., 4., 3., 4., 3., 2., 5., 3., 3., 3., 1., 3., 5., 4., 3., 3., 4.,\n",
-       "         5., 4., 5., 3., 3., 5., 3., 3., 4., 5., 5., 4., 4., 3., 4., 3., 5., 3.,\n",
-       "         3., 3.])]"
+       "[tensor([3891, 3829, 3560, 2465, 1640, 2859, 5602, 3595, 2109, 4028,  918, 2163,\n",
+       "         4468, 4807, 3591, 5537, 2119, 4489, 1338, 1775, 2348, 1613, 4993, 6034,\n",
+       "         5837, 3229, 1836, 1183, 4586, 1544, 1271, 2224,  423,  727, 6009, 5519,\n",
+       "         5666, 4421, 5830,  945, 5111,  111, 3617, 2254,  523, 5252, 5436, 5082,\n",
+       "         4982, 3568, 1242, 1883, 3303, 2345, 2070, 2909, 4693, 4419,  352, 3092,\n",
+       "          854, 4057, 4185, 1062, 3991, 5440, 3599, 4840, 2287, 2972, 1284, 4864,\n",
+       "         4587, 2594, 4225,  586, 5325, 4084, 5584, 3518, 5053, 2155, 2010, 3289,\n",
+       "         4897, 3841, 5884, 1135,  156, 2638, 3922, 1684, 3848, 3754, 1841, 4403,\n",
+       "         5557, 3840, 4880, 5165, 5107, 4783, 3756, 2278, 5131,   53,   12, 2096,\n",
+       "         1836, 2260, 4417, 4898, 1218,  604, 4261, 1888, 5043, 3525, 1501, 4746,\n",
+       "         2822, 1208, 1740, 2885, 4456, 2184, 1756, 3899]),\n",
+       " tensor([ 102, 3686, 2078,  655,  314, 1238,  952, 1196, 1271, 3110, 1178, 1243,\n",
+       "         1896, 1957,  139, 3606, 3412,  585,  513, 3878, 3742, 1944, 3193, 1562,\n",
+       "         1244, 3091, 1813, 2085, 3554,  108,   20, 3483, 3858, 2193, 2314, 1568,\n",
+       "         1245, 2246, 2466,  907, 1881, 1232, 2679, 2832, 3624,  901, 1373, 2335,\n",
+       "         1019, 1249,  108, 1069,  896,  773,  588,  353, 2559, 2867,  604, 3467,\n",
+       "         3323, 3628, 1180, 1360, 1355, 1995, 1482, 1180, 1522, 2300, 3372, 1234,\n",
+       "         1398, 2637, 2647, 1258, 1439, 2926,  892, 3180,  897,  549, 1533, 1211,\n",
+       "         3020, 2848,  537,  159, 1205, 1250, 2782, 2409, 2728, 2848, 3340, 3203,\n",
+       "         2033, 3672, 2857, 3666, 1190, 1968,  470, 2880, 3191, 1063,  727, 1885,\n",
+       "          558,  979, 2991,   33,  588, 1539, 3369, 3566, 3132, 2994, 3340, 2432,\n",
+       "         2326, 3407, 2879,    9, 3634,  589, 1696, 1819]),\n",
+       " tensor([2., 4., 3., 4., 3., 4., 1., 4., 5., 3., 4., 4., 5., 3., 4., 4., 5., 4.,\n",
+       "         4., 5., 4., 4., 4., 1., 3., 3., 2., 3., 3., 3., 5., 4., 4., 3., 4., 4.,\n",
+       "         4., 1., 3., 5., 4., 5., 2., 1., 3., 5., 3., 2., 3., 3., 3., 4., 3., 3.,\n",
+       "         4., 4., 4., 5., 5., 3., 2., 3., 4., 2., 4., 5., 4., 4., 1., 4., 3., 4.,\n",
+       "         3., 1., 4., 2., 3., 3., 2., 3., 4., 4., 4., 5., 5., 3., 4., 4., 5., 4.,\n",
+       "         3., 3., 3., 5., 4., 3., 2., 4., 4., 5., 4., 4., 5., 5., 5., 5., 4., 3.,\n",
+       "         5., 4., 4., 3., 5., 5., 3., 5., 4., 3., 4., 5., 2., 3., 3., 4., 5., 5.,\n",
+       "         5., 4.])]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,91 +557,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7815"
+       "6399"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(mlcf_dl)"
+    "len(mlcf_trn_dl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch import nn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.nn.modules.module.Module"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nn.Module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 6, 15, 24])"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.squeeze(torch.sum(torch.tensor([[1,2,3],[4,5,6],[7,8,9]]), \n",
-    "                        1, keepdim=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "def get_emb(n_emb, emb_dim):\n",
+    "    emb = torch.nn.Embedding(n_emb, emb_dim)\n",
+    "    emb.weight.data.uniform_(-0.01, 0.01)\n",
+    "    return emb\n",
+    "\n",
     "class MovieLensCfModel(torch.nn.Module):\n",
     "    def __init__(self, n_users, n_movies, n_features):\n",
     "        super().__init__()\n",
-    "        self.uf = torch.nn.Embedding(n_users, n_features)\n",
-    "        self.mf = torch.nn.Embedding(n_movies, n_features)\n",
-    "        self.ub = torch.nn.Embedding(n_users, 1)\n",
-    "        self.mb = torch.nn.Embedding(n_movies, 1)\n",
+    "        self.uf = get_emb(n_users, n_features)\n",
+    "        self.mf = get_emb(n_movies, n_features)\n",
+    "        self.ub = get_emb(n_users, 1)\n",
+    "        self.mb = get_emb(n_movies, 1)\n",
     "        \n",
     "    def forward(self, u_idxs, m_idxs):\n",
-    "        return torch.squeeze(torch.sum((self.uf[u_idxs] * self.mf[m_idxs]), 1, \n",
-    "                                       keepdim=True) + self.ub[u_idxs] + self.mb[m_idxs])"
+    "        return 5 * torch.sigmoid(torch.squeeze(torch.sum((self.uf(u_idxs) * self.mf(m_idxs)), 1, \n",
+    "                                       keepdim=True) + self.ub(u_idxs) + self.mb(m_idxs)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_features = 50\n",
+    "n_epochs = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlcf_model = MovieLensCfModel(len(uids), len(mids), n_features)\n",
+    "mlcf_trn_ds = MovieLensCfDataset(uid_idx, mid_idx, ratings_trn_arr)\n",
+    "mlcf_val_ds = MovieLensCfDataset(uid_idx, mid_idx, ratings_val_arr)\n",
+    "mlcf_trn_dl = MovieLensCfDataLoader(mlcf_trn_ds, shuffle=True, bs=64)\n",
+    "mlcf_val_dl = MovieLensCfDataLoader(mlcf_val_ds, bs=len(mlcf_val_ds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.Adam(mlcf_model.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch:0; iteration:0; trn_loss:2.432405710220337\n",
+      "epoch:0; iteration:500; trn_loss:1.876611590385437\n",
+      "epoch:0; iteration:1000; trn_loss:1.7131539583206177\n",
+      "epoch:0; iteration:1500; trn_loss:1.33926260471344\n",
+      "epoch:0; iteration:2000; trn_loss:1.0421702861785889\n",
+      "epoch:0; iteration:2500; trn_loss:0.8736897110939026\n",
+      "epoch:0; iteration:3000; trn_loss:1.0669044256210327\n",
+      "epoch:0; iteration:3500; trn_loss:0.6119546294212341\n",
+      "epoch:0; iteration:4000; trn_loss:1.2707244157791138\n",
+      "epoch:0; iteration:4500; trn_loss:0.9104400277137756\n",
+      "epoch:0; iteration:5000; trn_loss:0.9401925206184387\n",
+      "epoch:0; iteration:5500; trn_loss:0.982681930065155\n",
+      "epoch:0; iteration:6000; trn_loss:0.8931989073753357\n",
+      "epoch:0; iteration:6500; trn_loss:0.8575478196144104\n",
+      "epoch:0; iteration:7000; trn_loss:0.6615099906921387\n",
+      "epoch:0; iteration:7500; trn_loss:0.6814995408058167\n",
+      "epoch:0; iteration:8000; trn_loss:0.8597233891487122\n",
+      "epoch:0; iteration:8500; trn_loss:0.8457373976707458\n",
+      "epoch:0; iteration:9000; trn_loss:0.8364303708076477\n",
+      "epoch:0; iteration:9500; trn_loss:0.6681308150291443\n",
+      "epoch:0; iteration:10000; trn_loss:0.8705034852027893\n",
+      "epoch:0; iteration:10500; trn_loss:0.5977661609649658\n",
+      "epoch:0; iteration:11000; trn_loss:0.756331741809845\n",
+      "epoch:0; iteration:11500; trn_loss:0.5237497687339783\n",
+      "epoch:0; iteration:12000; trn_loss:0.7106503844261169\n",
+      "epoch:0; iteration:12500; trn_loss:0.8126569390296936\n",
+      "epoch:0; val_loss:0.7953726649284363\n",
+      "epoch:1; iteration:0; trn_loss:0.8948302865028381\n",
+      "epoch:1; iteration:500; trn_loss:0.42449721693992615\n",
+      "epoch:1; iteration:1000; trn_loss:0.6862610578536987\n",
+      "epoch:1; iteration:1500; trn_loss:0.807059109210968\n",
+      "epoch:1; iteration:2000; trn_loss:0.7402842044830322\n",
+      "epoch:1; iteration:2500; trn_loss:0.9228201508522034\n",
+      "epoch:1; iteration:3000; trn_loss:0.8064435720443726\n",
+      "epoch:1; iteration:3500; trn_loss:0.524452805519104\n",
+      "epoch:1; iteration:4000; trn_loss:0.5605372190475464\n",
+      "epoch:1; iteration:4500; trn_loss:0.5490114688873291\n",
+      "epoch:1; iteration:5000; trn_loss:0.7593528628349304\n",
+      "epoch:1; iteration:5500; trn_loss:0.6919324994087219\n",
+      "epoch:1; iteration:6000; trn_loss:0.7948166728019714\n",
+      "epoch:1; iteration:6500; trn_loss:0.5840571522712708\n",
+      "epoch:1; iteration:7000; trn_loss:0.9555606245994568\n",
+      "epoch:1; iteration:7500; trn_loss:0.5712541937828064\n",
+      "epoch:1; iteration:8000; trn_loss:0.9249424934387207\n",
+      "epoch:1; iteration:8500; trn_loss:0.6765780448913574\n",
+      "epoch:1; iteration:9000; trn_loss:0.7398052215576172\n",
+      "epoch:1; iteration:9500; trn_loss:1.1114141941070557\n",
+      "epoch:1; iteration:10000; trn_loss:0.9290106892585754\n",
+      "epoch:1; iteration:10500; trn_loss:0.6129641532897949\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(n_epochs):\n",
+    "    #start of epoch\n",
+    "    iteration = 0\n",
+    "    for mini_batch in mlcf_trn_dl:\n",
+    "        #start of iteration\n",
+    "        optimizer.zero_grad()\n",
+    "        preds = mlcf_model(mini_batch[0], mini_batch[1])\n",
+    "        loss = torch.nn.functional.mse_loss(preds, mini_batch[2])\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        if (iteration % 500) == 0:\n",
+    "            print(f\"epoch:{epoch}; iteration:{iteration}; trn_loss:{loss.item()}\")\n",
+    "        iteration += 1\n",
+    "    val_batch = next(iter(mlcf_val_dl))\n",
+    "    val_preds = mlcf_model(val_batch[0], val_batch[1])\n",
+    "    val_loss = torch.nn.functional.mse_loss(val_preds, val_batch[2])\n",
+    "    print(f\"epoch:{epoch}; val_loss:{val_loss}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8700399194525732"
+      ]
+     },
+     "execution_count": 322,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pow(0.75696946144104,0.5)"
    ]
   },
   {
